RESOLVED FIXED31932
V8 ScriptController is missing include for DEFINE_STATIC_LOCAL
https://bugs.webkit.org/show_bug.cgi?id=31932
Summary V8 ScriptController is missing include for DEFINE_STATIC_LOCAL
Steve Block
Reported 2009-11-27 06:03:14 PST
V8 ScriptController is missing include for DEFINE_STATIC_LOCAL. This is defined in wtf/StdLibExtras.h.
Attachments
Patch 1 for Bug 31932 (1.18 KB, patch)
2009-11-27 06:41 PST, Steve Block
no flags
Steve Block
Comment 1 2009-11-27 06:41:55 PST
Eric Seidel (no email)
Comment 2 2009-11-28 09:42:55 PST
Comment on attachment 43951 [details] Patch 1 for Bug 31932 Other ports get this from a prefix header?
Steve Block
Comment 3 2009-11-30 02:29:24 PST
This was introduced in http://trac.webkit.org/changeset/50993 It looks like Chromium picks up wtf/StdLibExtras.h via Widget.h -> chromium/PlatformWidgets.h.
WebKit Commit Bot
Comment 4 2009-11-30 09:42:03 PST
Comment on attachment 43951 [details] Patch 1 for Bug 31932 Clearing flags on attachment: 43951 Committed r51498: <http://trac.webkit.org/changeset/51498>
WebKit Commit Bot
Comment 5 2009-11-30 09:42:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.