2009-11-30  Steve Block  <steveblock@google.com>

Reviewed by Eric Seidel.

        Adds include of wtf/StdLibExtras.h for DEFINE_STATIC_LOCAL in V8 ScriptController.
        https://bugs.webkit.org/show_bug.cgi?id=31932

        Build fix only, no new tests.

        * bindings/v8/ScriptController.cpp: Modified. Adds include of wtf/StdLibExtras.h.

git-svn-id: svn://svn.chromium.org/blink/trunk@51498 bbb929c8-8fbe-4397-9dbb-9b2b20218538