third_party/WebKit/WebCore/bindings/v8/ScriptController.cpp
@@ -49,12 +49,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "NPV8Object.h"
 #include "ScriptSourceCode.h"
 #include "Settings.h"
-#include "Widget.h"
-#include "XSSAuditor.h"
-
 #include "V8Binding.h"
 #include "V8NPObject.h"
 #include "V8Proxy.h"
+#include "Widget.h"
+#include "XSSAuditor.h"
+#include <wtf/StdLibExtras.h>
 
 namespace WebCore {
 
